--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="./style.css" />
-        <title>テスト</title>
+        <title>FieldChat</title>
     </head>
     <body id="body">
         <script src="./script.js"></script>
